--- a/client/src/styles/components/table.scss
+++ b/client/src/styles/components/table.scss
@@ -19,7 +19,7 @@ td{
 
 th{
 	position: sticky;
-	top: 0;
+	top: 89px;
 	border-bottom: 3px solid $color-burgundy;
 }
 
@@ -82,7 +82,7 @@ select {
 
 // duck table styling //
 .tableContainer{
-    overflow-x: hidden; 
+    overflow-x: scroll;
     overflow-y: scroll;
     height: 100vh;
     width: 100vw;
